--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="uk-position-center">
 
 
-                            <div class="uk-grid-large uk-child-width-expand@s uk-text-center" uk-grid>
+                            <div class="uk-grid-large uk-child-width-expand@l uk-text-center" uk-grid>
                                     <div>
                                         <div class="uk-card uk-card-default uk-card-body" >Item</div>
                                     </div>
