--- a/index.html
+++ b/index.html
@@ -38,17 +38,17 @@
         </div>
     </section>
 
-    <div class="button-section">
+    <section class="button-section">
         <div class="inner-button-section">
-            <a href="#" class="link-button">STRATEGISCHE PLANUNG</a>
+            <a href="strategischeplanung.html" class="link-button">STRATEGISCHE PLANUNG</a>
         </div>
         <div class="inner-button-section">
-            <a href="#" class="link-button">BERATUNG</a>
+            <a href="beratung.html" class="link-button">BERATUNG</a>
         </div>
-    </div>
+    </section>
 
 
-    <div class="adress-info">
+    <section class="adress-info">
         <div class="inner-adress-info">
             <p>Bauwert Schweiz GmbH<br>
                 Dornachstrasse 279<br>
@@ -59,13 +59,13 @@
                 info@bauwertschweiz.ch
             </p>
         </div>
-    </div>
+    </section>
 
 
 
-    <div class="impressum">
-            <a href="#" class="impressum-button">Impressum</a>
-    </div>
+    <section class="impressum">
+            <a href="impressum.html" class="impressum-button">Impressum</a>
+    </section>
 
 
 
