--- a/index.html
+++ b/index.html
@@ -28,13 +28,7 @@
 
     <section class="header-image">
         <div class="inner-header-image">
-
-        </div>
-    </section>
-
-    <section class="main-graph">
-        <div class="inner-main-graph">
-            <img src="images/graph01.gif" width="100%" height="auto">
+            <img src="images/bg.jpg" width="100%" height="auto">
         </div>
     </section>
 
