--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Bauwert</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="format-detection" content="telephone=no">
 
     <link rel="stylesheet" href="css/main.css">
 
@@ -28,7 +29,8 @@
 
     <section class="header-image">
         <div class="inner-header-image">
-            <img src="images/bg.jpg" width="100%" height="auto">
+            <img src="images/bg.jpg
+            " width="100%" height="auto">
         </div>
     </section>
 
@@ -50,7 +52,7 @@
             </p>
             <p>
                 +78 235 67 68<br>
-                info@bauwertschweiz.ch
+                <a class="mail-link" href="mailto:info@bauwertschweiz.ch">info@bauwertschweiz.ch</a>
             </p>
         </div>
     </section>
