--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
     <section class="title">
         <div class="inner-title">
-            <img src="images/logo.png" width="100%" height="auto">
-            <p class="inner-title-text">STRATEGIEN FÜR IMMOBILIEN</p>
+            <img src="images/logo2.png" width="100%" height="auto">
+            <!--<p class="inner-title-text">STRATEGIEN FÜR IMMOBILIEN</p>-->
         </div>
     </section>
 
