--- a/index.html
+++ b/index.html
@@ -18,12 +18,17 @@
 
 <body>
 
-
+    <div class="bg">
+        <section class="title">
+            <div class="inner-title-light">
+                <img src="images/logo2.png" width="100%" height="auto">
+            </div>
+        </section>
+    </div>
 
     <section class="title">
-        <div class="inner-title">
+        <div class="inner-title-dark">
             <img src="images/logo2.png" width="100%" height="auto">
-            <!--<p class="inner-title-text">STRATEGIEN FÜR IMMOBILIEN</p>-->
         </div>
     </section>
 
@@ -62,6 +67,10 @@
     <section class="impressum">
             <a href="impressum.html" class="impressum-button">Impressum</a>
     </section>
+
+    <section class="desktop-impressum">
+        <a href="impressum.html" class="desktop-impressum-button">Kontakt</a> | <a href="impressum.html" class="desktop-impressum-button">Impressum</a>
+</section>
 
 
 
