--- a/strategischeplanung.html
+++ b/strategischeplanung.html
@@ -20,8 +20,14 @@
 
 
     <section class="title">
-        <div class="inner-title">
+        <div class="inner-title-dark">
             <p class="inner-title-text">STRATEGISCHE PLANUNG</p>
+        </div>
+    </section>
+
+    <section class="title-desktop">
+        <div class="inner-title-desktop">
+            <p class="inner-title-text-desktop">STRATEGISCHE PLANUNG</p>
         </div>
     </section>
 
@@ -44,6 +50,23 @@
     </section>
 
 
+
+<div class="clearfix content-desktop">
+        <div class="box">
+                <img src="images/graph01.gif" width="100%" height="auto">
+        </div>
+        <div class="box">
+                <div class="inner-content-info-left-desktop">
+                        <p>Ziel der Strategischen Planung ist das Erarbeiten von übergeordneten Entscheidungsgrundlagen, bevor
+                            höhere Kosten für eine konkrete Planung anfallen.
+                            <br><br><br>
+            
+                            Das Potential durch eine Strategische Planung einen Mehrwert zu generieren ist am grössten, je früher im
+                            Prozess die richtigen Weichen gestellt werden.
+                        </p>
+                    </div>
+        </div>
+</div>
 
 
 </body>
