--- a/beratung.html
+++ b/beratung.html
@@ -19,11 +19,17 @@
 
 
 
-    <section class="title">
-        <div class="inner-title">
-            <p class="inner-title-text">BERATUNG</p>
-        </div>
-    </section>
+        <section class="title">
+                <div class="inner-title-dark">
+                    <p class="inner-title-text">Beratung</p>
+                </div>
+            </section>
+
+    <section class="title-desktop">
+            <div class="inner-title-desktop">
+                <p class="inner-title-text-desktop">BERATUNG</p>
+            </div>
+        </section>
 
     <section class="main-graph">
         <div class="inner-main-graph">
@@ -46,6 +52,27 @@
             </p>
         </div>
     </section>
+
+    <div class="clearfix content-desktop">
+        <div class="box">
+            <img src="images/graph02.gif" width="100%" height="auto">
+        </div>
+        <div class="box">
+            <div class="inner-content-info-left-desktop">
+                <p class="bold-text">Projektleiter Bauherr</p>
+                <p>
+                    Als Projektleiter Bauherr begleiten wir den Planungs- und Bauprozess von Anfang bis Ende in der Rolle
+                    des Bauherrn.
+                </p>
+                <br>
+                <p class="bold-text">Einzelberatung</p>
+                <p>
+                    Einzelberatungen richten sich an konkrete Probleme oder Fragestellungen im Planungs- oder Bauprozess.
+                </p>
+            </div>
+    
+        </div>
+    </div>
 
 
 
