--- a/index.html
+++ b/index.html
@@ -19,9 +19,13 @@
 <body>
 
     <div class="bg">
-        <section class="title">
+        <section class="title center-vertical">
             <div class="inner-title-light">
-                <img src="images/logo2.png" width="100%" height="auto">
+                <img src="images/logo3.png" width="100%" height="auto">
+            </div>
+            <div class="inner-title-light-button">
+                <a href="strategischeplanung.html" class="link-button-desktop">STRATEGISCHE PLANUNG</a>
+                <a href="beratung.html" class="link-button-desktop">BERATUNG</a>
             </div>
         </section>
     </div>
@@ -63,13 +67,13 @@
     </section>
 
 
+<section class="impressum">
+    <a href="impressum.html" class="impressum-button">Impressum</a>
+</section>
 
-    <section class="impressum">
-            <a href="impressum.html" class="impressum-button">Impressum</a>
-    </section>
-
-    <section class="desktop-impressum">
-        <a href="impressum.html" class="desktop-impressum-button">Kontakt</a> | <a href="impressum.html" class="desktop-impressum-button">Impressum</a>
+<section class="desktop-impressum">
+    <a href="mailto:info@bauwertschweiz.ch" class="desktop-impressum-button">Kontakt</a> | <a href="impressum.html"
+        class="desktop-impressum-button">Impressum</a>
 </section>
 
 
