--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 </section>
 
 <section class="desktop-impressum">
-    <a href="mailto:info@bauwertschweiz.ch" class="desktop-impressum-button">Kontakt</a> | <a href="impressum.html"
-        class="desktop-impressum-button">Impressum</a>
+    <a href="impressum.html"
+        class="desktop-impressum-button">Kontakt &nbsp; | &nbsp; Impressum</a>
 </section>
 
 
