--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
                 <a href="strategischeplanung.html" class="link-button-desktop">STRATEGISCHE PLANUNG</a>
                 <a href="beratung.html" class="link-button-desktop">BERATUNG</a>
             </div>
+            <section class="desktop-impressum">
+                <a href="kontakt.html" class="desktop-impressum-button">KONTAKT</a>
+            </section>
+            <section class="desktop-impressum">
+                <a href="impressum.html" class="desktop-impressum-button">IMPRESSUM</a>
+            </section>
         </section>
     </div>
 
@@ -71,10 +77,6 @@
     <a href="impressum.html" class="impressum-button">Impressum</a>
 </section>
 
-<section class="desktop-impressum">
-    <a href="impressum.html"
-        class="desktop-impressum-button">Kontakt &nbsp; | &nbsp; Impressum</a>
-</section>
 
 
 
