--- a/strategischeplanung.html
+++ b/strategischeplanung.html
@@ -17,17 +17,39 @@
 
 <body>
 
-
+    <div class="bg">
+        <section class="title center-vertical">
+            <div style="margin: 0 auto; width: 70%;background-color: white;">
+                <section class="title-desktop">
+                    <div class="inner-title-desktop">
+                        <p class="inner-title-text-desktop">STRATEGISCHE PLANUNG</p>
+                    </div>
+                </section>
+                <div class="clearfix content-desktop">
+                    <div class="box">
+                        <img src="images/graph01.gif" width="100%" height="auto">
+                    </div>
+                    <div class="box">
+                        <div class="inner-content-info-left-desktop">
+                            <p>Ziel der Strategischen Planung ist das Erarbeiten von übergeordneten Entscheidungsgrundlagen,
+                                bevor
+                                höhere Kosten für eine konkrete Planung anfallen.
+                                <br><br><br>
+    
+                                Das Potential durch eine Strategische Planung einen Mehrwert zu generieren ist am grössten,
+                                je früher im
+                                Prozess die richtigen Weichen gestellt werden.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
 
     <section class="title">
         <div class="inner-title-dark">
             <p class="inner-title-text">STRATEGISCHE PLANUNG</p>
-        </div>
-    </section>
-
-    <section class="title-desktop">
-        <div class="inner-title-desktop">
-            <p class="inner-title-text-desktop">STRATEGISCHE PLANUNG</p>
         </div>
     </section>
 
@@ -49,24 +71,6 @@
         </div>
     </section>
 
-
-
-<div class="clearfix content-desktop">
-        <div class="box">
-                <img src="images/graph01.gif" width="100%" height="auto">
-        </div>
-        <div class="box">
-                <div class="inner-content-info-left-desktop">
-                        <p>Ziel der Strategischen Planung ist das Erarbeiten von übergeordneten Entscheidungsgrundlagen, bevor
-                            höhere Kosten für eine konkrete Planung anfallen.
-                            <br><br><br>
-            
-                            Das Potential durch eine Strategische Planung einen Mehrwert zu generieren ist am grössten, je früher im
-                            Prozess die richtigen Weichen gestellt werden.
-                        </p>
-                    </div>
-        </div>
-</div>
 
 
 </body>
